# covariance

./: .gitignore  .rsync-project  CHANGELOG.md  CHANGELOG.org  LICENSE  README.md  README.org  covariance.cabal  flake.nix  hie.yaml  shrinkage.cabal  stack.yaml
src/Statistics/: Covariance.hs  Shrinkage.hs
src/Statistics/Covariance/: GraphicalLasso.hs  LedoitWolf.hs  OracleApproximatingShrinkage.hs  RaoBlackwellLedoitWolf.hs  Types.hs
src/Statistics/Covariance/Internal/: Tools.hs
test/: Spec.hs  Test.hs
