cabal-version:      2.4
name:               covariance
version:            0.1.0.0
synopsis:
    Well-conditioned estimation of large-dimensional covariance matrices

-- A longer description of the package.
-- description:
homepage:           https://github.com/dschrempf/covariance

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com

-- A copyright notice.
-- copyright:
category:
  Math
  Statistics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Statistics.Covariance.LedoitWolf

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , hmatrix
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite covariance-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ^>=4.14.3.0
